overflow:hidden on sections, responsive fixed for phone, logo increased

--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -142,7 +142,7 @@ hr
 	position: fixed
 	top: 100px
 	left: 9%
-	width: 65px
+	width: 92px
 	z-index: 600
 
 #main-menu 
@@ -197,6 +197,7 @@ article.content-section
 
 #about
 	margin-top: -250px
+	overflow-x: hidden
 	.tri-top
 		transform: rotate(8deg)
 		-ms-transform: rotate(8deg)
@@ -215,6 +216,7 @@ article.content-section
 		top: -200px
 
 #companies
+	overflow-x: hidden
 	.tri-top
 		transform: rotate(5deg)
 		-ms-transform: rotate(5deg)
@@ -253,6 +255,7 @@ article.content-section
 								padding-right: 6px
 
 #contact
+	overflow-x: hidden
 	.tri-top
 		transform: rotate(8deg)
 		-ms-transform: rotate(8deg)
@@ -271,6 +274,7 @@ article.content-section
 		top: -200px
 
 #map
+	overflow-x: hidden
 	#map-info
 		margin-bottom: 100px
 		a
