--- a/sites/all/themes/clim/sass/responsive.sass
+++ b/sites/all/themes/clim/sass/responsive.sass
@@ -602,11 +602,11 @@
 	.slide-window
 		height: 250px
 
-@media only screen and (orientation: portrait) and (device-width: 320px), (device-width: 768px)
+@media only screen and (min-device-width: 320px) and (max-device-width: 768px) and (orientation: portrait) 
 	.slide
 		-webkit-background-size: auto 100%
 	
-@media only screen and (orientation: landscape) and (device-width: 320px), (device-width: 768px)
+@media only screen and (min-device-width: 320px) and (max-device-width: 768px) and (orientation: landscape)
 	.slide
 		-webkit-background-size: 100% auto
 
